--- a/styles/main.css
+++ b/styles/main.css
@@ -81,7 +81,7 @@ ul {
   left: -5%;
   top: -5%;
   display: flex;
-  color: rgb(60, 60, 77);
+  color: #003;
   align-items: center;
   justify-content: center;
   text-align: center;
